--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run:
           name: Run unit tests
-          command: yarn test
+          command: yarn build && yarn test
 
       - run:
           name: Run end-to-end tests
