--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run:
           name: Run end-to-end tests
-          command: yarn build-e2e && yarn test-e2e
+          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
 
       - store_test_results:
           path: /tmp/test-results
