Clone gogen and build so the binary is available
- include golang in docker image

[#165925148]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,20 @@ jobs:
     docker:
       - image: circleci/node:11.14-browsers
 
+      - image: circleci/golang:1.12.1
+
     working_directory: ~/bear
 
     steps:
       - checkout
+
+      - run:
+          name: Clone gogen repository
+          command: git clone git@github.com:codeforamerica/gogen ~/go/src/gogen
+
+      - run:
+          name: Build gogen binary
+          command: cd ~/go/src/gogen && go get ./... && go build
 
       # Download and cache dependencies
       - restore_cache:
