--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 
       - run:
           name: Fetch gogen binary
-          command: export TOKEN=$GITHUB_ACCESS_TOKEN && bash ~/bear/.circleci/github_download_release.sh "latest" ~/bear/gogen
+          command: export TOKEN=$GITHUB_ACCESS_TOKEN && mkdir ~/go && mkdir ~/go/bin && bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen
 
       # Download and cache dependencies
       - restore_cache:
