--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
     "package-linux": "yarn build && electron-builder build --linux",
     "package-win": "yarn build && electron-builder build --win --x64",
+    "package-mac": "yarn build && electron-builder build --mac --x64",
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{js,jsx,json,html,css,less,scss,yml}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
@@ -112,7 +113,7 @@
   },
   "author": {
     "name": "Code for America",
-    "email": "",
+    "email": "clearmyrecord@codeforamerica.org",
     "url": "https://codeforamerica.org"
   },
   "contributors": [],
