--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:11.14-browsers
+      - image: codeforamerica/bear-ci
 
     working_directory: ~/bear
 
@@ -11,14 +11,15 @@ jobs:
 
       - run:
           name: Fetch gogen binary
-          command: export TOKEN=$GITHUB_ACCESS_TOKEN && mkdir ~/go && mkdir ~/go/bin && bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen && chmod +x ~/go/bin/gogen
+          command: |
+            export TOKEN=$GITHUB_ACCESS_TOKEN
+            mkdir -p ~/go/bin
+            bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen
+            chmod +x ~/go/bin/gogen
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
 
       - run: yarn install
 
@@ -35,5 +36,48 @@ jobs:
           name: Run end-to-end tests
           command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
 
-      - store_test_results:
-          path: /tmp/test-results
+  package:
+    docker:
+      - image: codeforamerica/bear-ci
+
+    working_directory: ~/bear
+
+    steps:
+      - checkout
+
+      - run:
+          name: Fetch gogen binary
+          command: |
+            export TOKEN=$GITHUB_ACCESS_TOKEN
+            mkdir -p ~/go/bin
+            bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen
+            chmod +x ~/go/bin/gogen
+
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run:
+          name: Build and Publish for Windows
+          command: |
+            yarn package-win
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - hold:
+          type: approval
+          requires:
+            - build
+      - package:
+          requires:
+            - hold
