--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bear",
   "productName": "BEAR",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Bulk Expungement Analysis of Records (BEAR). Electron app to configure eligibility logic and identify convictions eligible for Prop 64 relief",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -18,9 +18,7 @@
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
     "package": "yarn build && electron-builder build --publish never",
     "package-all": "yarn build && electron-builder build -mwl",
-    "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
-    "package-linux": "yarn build && electron-builder build --linux",
-    "package-win": "yarn build && electron-builder build --win --x64",
+    "package-win": "yarn build && electron-builder build --win --x64 --publish always",
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{js,jsx,json,html,css,less,scss,yml}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
@@ -82,8 +80,7 @@
     },
     "win": {
       "target": [
-        "nsis",
-        "msi"
+        "nsis"
       ]
     },
     "linux": {
@@ -102,8 +99,8 @@
     "publish": {
       "provider": "github",
       "owner": "codeforamerica",
-      "repo": "automated_conviction_relief",
-      "private": false
+      "repo": "BEAR",
+      "private": true
     }
   },
   "repository": {
@@ -112,7 +109,7 @@
   },
   "author": {
     "name": "Code for America",
-    "email": "",
+    "email": "clearmyrecord@codeforamerica.org",
     "url": "https://codeforamerica.org"
   },
   "contributors": [],
