--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,11 @@ jobs:
 
       - run:
           name: Fetch gogen binary
-          command: export TOKEN=$GITHUB_ACCESS_TOKEN && mkdir ~/go && mkdir ~/go/bin && bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen && chmod +x ~/go/bin/gogen
+          command: |
+            export TOKEN=$GITHUB_ACCESS_TOKEN
+            mkdir -p ~/go/bin
+            bash ~/bear/.circleci/github_download_release.sh "latest" ~/go/bin/gogen
+            chmod +x ~/go/bin/gogen
 
       # Download and cache dependencies
       - restore_cache:
@@ -26,16 +30,28 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      #
+      #      - run:
+      #          name: Run unit tests
+      #          command: yarn build && yarn test
+      #
+      #      - run:
+      #          name: Run end-to-end tests
+      #          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
 
       - run:
-          name: Run unit tests
-          command: yarn build && yarn test
-
-      - run:
-          name: Run end-to-end tests
-          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
-
-      - run: yarn package-win && yarn package-mac
+          name: Build for Windows
+          command: |
+            sudo dpkg --add-architecture i386
+            wget -nc https://dl.winehq.org/wine-builds/winehq.key
+            sudo apt-key add winehq.key
+            sudo sh -c 'echo "deb https://dl.winehq.org/wine-builds/debian/ stretch main"  >> /etc/apt/sources.list.d/wine.list'
+            sudo apt install apt-transport-https
+            sudo apt update
+            sudo apt install --install-recommends winehq-stable
+            echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
+            sudo apt-get install -y wine
+            yarn package-win
 
       - persist_to_workspace:
           root: './release'
