--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,10 @@ jobs:
           name: Build for Windows
           command: |
             sudo dpkg --add-architecture i386
-            sudo add-apt-repository -y ppa:ubuntu-wine/ppa
-            sudo apt-get update
+            sudo echo "deb https://dl.winehq.org/wine-builds/debian/ stretch main"  >> /etc/apt/sources.list.d/wine.list
+            sudo apt install apt-transport-https
+            sudo apt update
+            sudo apt install --install-recommends winehq-stable
             echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
             sudo apt-get install -y wine
             yarn package-win
