--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,17 +30,17 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      #
-      #      - run:
-      #          name: Run unit tests
-      #          command: yarn build && yarn test
-      #
-      #      - run:
-      #          name: Run end-to-end tests
-      #          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
 
       - run:
-          name: Build for Windows
+          name: Run unit tests
+          command: yarn build && yarn test
+
+      - run:
+          name: Run end-to-end tests
+          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
+
+      - run:
+          name: Build and Publish for Windows
           command: |
             sudo dpkg --add-architecture i386
             wget -nc https://dl.winehq.org/wine-builds/winehq.key
@@ -52,15 +52,6 @@ jobs:
             echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
             sudo apt-get install -y wine
             yarn package-win
-
-      - persist_to_workspace:
-          root: './release'
-          paths:
-            - 'BEAR 0.0.1.msi'
-            - BEAR-0.0.1.dmg
-
-      - store_test_results:
-          path: /tmp/test-results
 
   deploy:
     docker:
