Change triggering branch temporarily
Co-authored-by: Laura Kogler <lkogler@codeforamerica.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       - run:
           name: Build and Publish for Windows
           command: |
-            if [[ "${CIRCLE_BRANCH}" == "master" && -n "${CIRCLE_TAG}" ]]; then
+            if [[ "${CIRCLE_BRANCH}" == "ci_script" && -n "${CIRCLE_TAG}" ]]; then
               sudo dpkg --add-architecture i386
               wget -nc https://dl.winehq.org/wine-builds/winehq.key
               sudo apt-key add winehq.key
