--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: |
             export TOKEN=$GITHUB_ACCESS_TOKEN
             export FILE=gogen_win.exe
-            bash ~/bear/.circleci/github_download_release.sh "latest" ./resources/gogen
+            bash ~/bear/.circleci/github_download_release.sh "latest" ./gogen.exe
 
       - restore_cache:
           keys:
@@ -66,11 +66,11 @@ jobs:
       - run:
           name: Build and Publish for Windows
           command: |
-            yarn package-win
+            yarn package-publish-win
 
 workflows:
   version: 2
-  build-and-deploy:
+  build-and-package:
     jobs:
       - build
       - hold:
