--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js",
     "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
-    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
+    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest test/components",
     "test-update-snapshots": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest -u",
     "test-all": "yarn lint && yarn flow && yarn build && yarn test && yarn build-e2e && yarn test-e2e",
-    "test-e2e": "node -r @babel/register ./internals/scripts/CheckBuiltsExist.js && cross-env NODE_ENV=test testcafe electron:./ ./test/e2e/HomePage.e2e.js",
-    "test-e2e-live": "node -r @babel/register ./internals/scripts/CheckBuiltsExist.js && cross-env NODE_ENV=test testcafe-live electron:./ ./test/e2e/HomePage.e2e.js",
+    "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest test/e2e",
     "test-watch": "yarn test --watch"
   },
   "lint-staged": {
@@ -64,7 +63,10 @@
       "app/main.prod.js.map",
       "package.json"
     ],
-    "extraResources": ["./gogen.exe", "./gogen"],
+    "extraResources": [
+      "./gogen.exe",
+      "./gogen"
+    ],
     "dmg": {
       "contents": [
         {
