Ignore eslint rule prohibiting explicit values for booleans
- this just makes it harder to set boolean props conditionally on components

[#164292630]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,8 @@
         "config": "configs/webpack.config.eslint.js"
       }
     }
+  },
+  "rules": {
+    "react/jsx-boolean-value": "off"
   }
 }
