--- a/package.json
+++ b/package.json
@@ -252,6 +252,7 @@
     "electron-log": "^3.0.4",
     "electron-updater": "^4.0.6",
     "history": "^4.9.0",
+    "node-pdftk": "^2.0.3",
     "normalize": "^0.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
