Include summmaryReportTemplate in packaged resources
- must specify extra resources in package.json under "build" when using electron-builder
- still requires pdftk to be installed separately on any machine running BEAR

[#164714845]

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     ],
     "extraResources": [
       "./gogen.exe",
-      "./gogen"
+      "./gogen",
+      "./resources/*"
     ],
     "dmg": {
       "contents": [
