Provide mock scrollTo for tests
Browser used in Jest doesn't have scrollTo support (though our live app
does), so was producing noisy test failures. To prevent this, we now mock
out window.scrollTo in tests.

Idea taken from https://github.com/jsdom/jsdom/issues/1843#issuecomment-357556277

--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
       "^.+\\.jsx?$": "babel-jest"
     },
     "setupFiles": [
-      "./internals/scripts/CheckBuiltsExist.js"
+      "./internals/scripts/CheckBuiltsExist.js",
+      "./test/setup.js"
     ]
   },
   "devDependencies": {
