Use "official" icon from marketing
[#166887714]

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
       ]
     },
     "win": {
-      "icon": "app/assets/icons/win/cfa.png",
+      "icon": "app/assets/icons/win/cfa.ico",
       "target": [
         "nsis"
       ]
