Mock fs library in test
- never interact with real file system in test
- mock fs library lives in __mocks__/fs.js
- use mock library when testing gogenUtils and fileUtils

[#167268180]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     }
   },
   "rules": {
-    "react/jsx-boolean-value": "off"
+    "react/jsx-boolean-value": "off",
+    "no-underscore-dangle": "off"
   }
 }
