Only run hold/package step on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,10 @@ workflows:
           type: approval
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - master
       - package:
           requires:
             - hold
