Update productName in both places

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bear",
-  "productName": "BEAR",
+  "productName": "Clear my Record BEAR",
   "version": "0.1.0",
   "description": "Bulk Expungement Analysis of Records (BEAR). Electron app to configure eligibility logic and identify convictions eligible for Prop 64 relief",
   "scripts": {
