Update generated filename on Windows
Also reverts changes to the product name, which is only used to generate
the package name for Mac. Windows packaging step uses the NPM package
name to determine the generated filename.

[Finishes #167549649]

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bear",
-  "productName": "Clear my Record BEAR",
+  "name": "clearmyrecord-bear",
+  "productName": "BEAR",
   "version": "0.1.0",
   "description": "Bulk Expungement Analysis of Records (BEAR). Electron app to configure eligibility logic and identify convictions eligible for Prop 64 relief",
   "scripts": {
@@ -56,7 +56,7 @@
   "main": "./app/main.prod.js",
   "build": {
     "appId": "org.codeforamerica.BEAR",
-    "productName": "Clear my Record BEAR",
+    "productName": "BEAR",
     "files": [
       "app/dist/",
       "app/app.html",
