--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
       - run:
           name: Build and Publish for Windows
           command: |
+            export GH_TOKEN=$GITHUB_ACCESS_TOKEN
             yarn package-publish-win
 
 workflows:
