--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clearmyrecord-bear",
   "productName": "BEAR",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Bulk Expungement Analysis of Records (BEAR). Electron app to configure eligibility logic and identify convictions eligible for Prop 64 relief",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -19,7 +19,7 @@
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
     "package-mac": "yarn build && electron-builder build --mac --x64 --publish never",
     "package-win": "yarn build && electron-builder build --win --x64 --publish never",
-    "package-publish-win": "yarn build && electron-builder build --win --x64 --publish always",
+    "package-publish": "yarn build && electron-builder build --mac --x64 --publish always && electron-builder build --win --x64 --publish always",
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{js,jsx,json,html,css,less,scss,yml}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
