--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
 
 workflows:
   version: 2
-  build:
+  pipeline:
     jobs:
       - build
       - hold:
@@ -82,6 +82,6 @@ workflows:
             branches:
               only:
                 - master
-      - package-and-release:
+      - package-and-draft:
           requires:
             - hold
