--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
     "package-mac": "yarn build && electron-builder build --mac --x64 --publish never",
     "package-win": "yarn build && electron-builder build --win --x64 --publish never",
-    "package-publish": "yarn build && electron-builder build --mac --x64 --publish always && electron-builder build --win --x64 --publish always",
+    "package-publish-win": "yarn build && electron-builder build --win --x64 --publish always",
+    "package-publish-mac": "yarn build && electron-builder build --mac --x64 --publish always",
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{js,jsx,json,html,css,less,scss,yml}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
