Adds separate CI-only integration test directory
- because some tests fail on some local machines
- simplify integration tests so one test goes through complete flow

[#167323119]

Co-authored-by: Molly TM <mollyt@codeforamerica.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
 
       - run:
           name: Run end-to-end tests
-          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e
+          command: START_MINIMIZED=true yarn build-e2e && yarn test-e2e && yarn test-ci-e2e
 
   package-and-draft:
     docker:
