Create generic unstyle pdf from react-pdf
[#167713541]

--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "yarn": "^1.15.2"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.3",
     "cfa-styleguide": "codeforamerica/cfa-styleguide-npm",
     "connected-react-router": "^6.3.2",
     "core-js": "2",
