--- a/package.json
+++ b/package.json
@@ -252,6 +252,7 @@
     "node-pdftk": "^2.0.3",
     "normalize": "^0.3.1",
     "react": "^16.8.6",
+    "react-accessible-accordion": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.2",
     "react-redux": "^6.0.1",
