Publish all Github releases as "pre-release"
No longer publish as draft.

[#167988757]

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
       "provider": "github",
       "owner": "codeforamerica",
       "repo": "BEAR",
-      "private": true
+      "releaseType": "prerelease"
     }
   },
   "repository": {
