--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clearmyrecord-hs_11361",
   "productName": "Clear My Record",
-  "version": "0.3.0",
+  "version": "0.4.0-rc1",
   "description": "Electron app to configure eligibility logic and identify convictions eligible for CA Prop 64 relief",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
