--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-erb": "^0.0.2",
     "eslint-config-prettier": "^4.3.0",
@@ -221,13 +221,12 @@
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.1",
-    "spectron": "^5.0.0",
+    "spectron": "^7.0.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-prettier": "^5.0.0",
     "stylelint-config-standard": "^18.2.0",
     "terser-webpack-plugin": "^1.2.3",
-    "testcafe": "^1.1.0",
     "testcafe-browser-provider-electron": "^0.0.8",
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.1.0",
@@ -249,6 +248,7 @@
     "electron-log": "^3.0.4",
     "electron-updater": "^4.0.6",
     "history": "^4.9.0",
+    "minimist": "1.2.5",
     "node-pdftk": "^2.0.3",
     "normalize": "^0.3.1",
     "react": "^16.8.6",
@@ -260,7 +260,9 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.11"
+    "source-map-support": "^0.5.11",
+    "testcafe": "^1.8.4",
+    "tree-kill": "1.2.2"
   },
   "devEngines": {
     "node": ">=7.x",
